# prosperity

./: .gitignore  LICENSE  README.md  meson.build  meson.options
spec/: index.bs
src/: error.h  logging.c  logging.h  main.c  meson.build  parsing.c  parsing.h  server.c  server.h  serverfeed.c  serveroptions.h  wrapper.c  wrapper.h
tests/: meson.build  test_csv_parse.c  test_csv_parse_unicde.c  test_csv_parse_unicode.c  test_csv_put.c  test_utils.c  test_utils.h  tests.c
tests/etc/: test_csv_parse1.csv  test_csv_parse_unicode.csv
